--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
       <artifactId>spring-tx</artifactId>
       <version>5.1.5.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>5.1.3.RELEASE</version>
+    </dependency>
+
 
     <!--======================================= validation ===========================================-->
 
